Start using the RESTAdapter and the api-stub. Add top-hackers to the contests page

--- a/app/templates/contests.hbs
+++ b/app/templates/contests.hbs
@@ -1,69 +1,76 @@
-<div class="widget stacked widget-table action-table upcoming-contests">
+<div class="col-md-8">
+  <div class="widget stacked widget-table action-table upcoming-contests">
 
-  <div class="widget-header">
-    <i class="fa fa-th-list"></i>
-    <h3>Current and Upcoming Contests</h3>
-  </div> <!-- /widget-header -->
+    <div class="widget-header">
+      <i class="fa fa-th-list"></i>
+      <h3>Current and Upcoming Contests</h3>
+    </div> <!-- /widget-header -->
 
-  <div class="widget-content">
+    <div class="widget-content">
 
-    <table class="table table-striped table-bordered">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Starts</th>
-          <th>Duration</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td><h4>Goodbye 2013</h4> A <em>little</em> description, if available goes here </td>
-          <td>31st December 2013 <br />04:00pm UTC-1</td>
-          <td>75 minutes</td>
-          <td><a href="" role="button" class="btn btn-success">Register</a><br /><br /><a>32</a> Registered</td>
-        </tr>
+      <table class="table table-striped table-bordered">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Starts</th>
+            <th>Duration</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
 
-        <tr>
-          <td><h4>Welcome 2014</h4></td>
-          <td>7th January 2014 <br />04:00pm UTC-1</td>
-          <td>75 minutes</td>
-          <td><a href="" role="button" class="btn btn-success">Register</a><br /><br /><a>46</a> Registered</td>
-        </tr>
+        {{#each}}
+          <tr>
+            <td><h4>{{name}}</h4> </td>
+            <td>{{starts}}</td>
+            <td>{{duration}}</td>
+            <td>
+              <a href="" role="button" class="btn btn-success">Register</a><br /><br />
+              <a>{{already_registered}}</a> Registered
+            </td>
+          </tr>
+        {{/each}}
 
-        <tr>
-          <td><h4>Contest #101</h4></td>
-          <td>14th January 2014 <br />03:00pm UTC-1</td>
-          <td>75 minutes</td>
-          <td><a href="" role="button" class="btn btn-success">Register</a><br /><br /><a>20</a> Registered</td>
-        </tr>
-      </tbody>
-      <!-- <tfoot> This is the footer... I hope it freaking works </tfoot> -->
-    </table>
-  </div> <!-- /widget-content -->
+        <!--  -->
+        <!--         <tr> -->
+        <!--           <td><h4>Welcome 2014</h4></td> -->
+        <!--           <td>7th January 2014 <br />04:00pm UTC&#45;1</td> -->
+        <!--           <td>75 minutes</td> -->
+        <!--           <td><a href="" role="button" class="btn btn&#45;success">Register</a><br /><br /><a>46</a> Registered</td> -->
+        <!--         </tr> -->
+        <!--  -->
+        <!--         <tr> -->
+        <!--           <td><h4>Contest #101</h4></td> -->
+        <!--           <td>14th January 2014 <br />03:00pm UTC&#45;1</td> -->
+        <!--           <td>75 minutes</td> -->
+        <!--           <td><a href="" role="button" class="btn btn&#45;success">Register</a><br /><br /><a>20</a> Registered</td> -->
+        <!--         </tr> -->
+        </tbody>
+      </table>
+    </div> <!-- /widget-content -->
 
-</div> <!-- /widget -->
+  </div> <!-- /widget -->
 
 
-<div class="widget stacked widget-table action-table past-contests">
+  <div class="widget stacked widget-table action-table past-contests">
 
-  <div class="widget-header">
-    <i class="fa fa-th-list"></i>
-    <h3>Past Contests</h3>
-  </div> <!-- /widget-header -->
+    <div class="widget-header">
+      <i class="fa fa-th-list"></i>
+      <h3>Past Contests</h3>
+    </div> <!-- /widget-header -->
 
-  <div class="widget-content">
+    <div class="widget-content">
 
-    <table class="table table-striped table-bordered">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Started</th>
-          <th>Duration</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
+      <table class="table table-striped table-bordered">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Started</th>
+            <th>Duration</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
         <tr>
           <td><h4>Goodbye 2013</h4></td>
           <td>31st December 2013 <br />04:00pm UTC-1</td>
@@ -84,9 +91,14 @@
           <td>75 minutes</td>
           <td><a href="" role="button" class="btn btn-info">Rankings</a><br /></td>
         </tr>
-      </tbody>
-      <!-- <tfoot> This is the footer... I hope it freaking works </tfoot> -->
-    </table>
-  </div> <!-- /widget-content -->
+        </tbody>
+        <!-- <tfoot> This is the footer... I hope it freaking works </tfoot> -->
+      </table>
+    </div> <!-- /widget-content -->
 
-</div> <!-- /widget -->
+  </div> <!-- /widget -->
+</div>
+
+<div class="col-md-4">
+  {{view 'top_hackers'}}
+</div>
