Add Contest page

--- a/app/templates/contests.hbs
+++ b/app/templates/contests.hbs
@@ -21,7 +21,7 @@
 
         {{#each}}
           <tr>
-            <td><h4>{{#link-to 'contests.contest' this}} {{name}} {{/link-to}}</h4> </td>
+            <td><h4>{{#link-to 'contest' this}} {{name}} {{/link-to}}</h4> </td>
             <td>{{this.starts}}</td>
             <td>{{duration}}</td>
             <td>
@@ -30,21 +30,6 @@
             </td>
           </tr>
         {{/each}}
-
-        <!--  -->
-        <!--         <tr> -->
-        <!--           <td><h4>Welcome 2014</h4></td> -->
-        <!--           <td>7th January 2014 <br />04:00pm UTC&#45;1</td> -->
-        <!--           <td>75 minutes</td> -->
-        <!--           <td><a href="" role="button" class="btn btn&#45;success">Register</a><br /><br /><a>46</a> Registered</td> -->
-        <!--         </tr> -->
-        <!--  -->
-        <!--         <tr> -->
-        <!--           <td><h4>Contest #101</h4></td> -->
-        <!--           <td>14th January 2014 <br />03:00pm UTC&#45;1</td> -->
-        <!--           <td>75 minutes</td> -->
-        <!--           <td><a href="" role="button" class="btn btn&#45;success">Register</a><br /><br /><a>20</a> Registered</td> -->
-        <!--         </tr> -->
         </tbody>
       </table>
     </div> <!-- /widget-content -->
