--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,7 +1,37 @@
-<h2>question</h2>
-model: {{model}}<br /><br />
+<div class="col-md-8">
 
-title: {{title}}<br />
-Description: {{description}}<br />
+  <div class="widget stacked">
 
+    <div class="widget-header">
+      <i class="fa fa-thumb-tack"></i>
+      <h3>{{title}}</h3>
+    </div> <!-- /widget-header -->
+
+    <div class="widget-content">
+      {{description}}
+    </div> <!-- /widget-content -->
+
+  </div> <!-- /widget -->
+
+</div> <!-- /span8 -->
+
+
+
+<div class="col-md-4">
+
+  <div class="widget stacked">
+
+    <div class="widget-header">
+      <i class="fa fa-upload"></i>
+      <h3>Submission</h3>
+    </div> <!-- /widget-header -->
+
+    <div class="widget-content">
+      Submission details and buttons and what not will be here. This is just a placeholder in the
+      mean time.
+    </div> <!-- /widget-content -->
+
+  </div> <!-- /widget -->
+
+</div> <!-- /col -->
 
