Show something reasonable when there are no upcomming contests

--- a/app/templates/contests/index.hbs
+++ b/app/templates/contests/index.hbs
@@ -29,6 +29,8 @@
               <a>{{alreadyRegistered}}</a> Registered
             </td>
           </tr>
+        {{else}}
+          <tr><td colspan="4"><h2>No contests found</h2></td></tr>
         {{/each}}
         </tbody>
       </table>
