Rename views. use hyphenation

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,15 +2,15 @@
 
   <div class="col-md-7">
 
-    {{view 'recent_news'}}
-    {{view 'recent_editorials'}}
+    {{view 'recent-news'}}
+    {{view 'recent-editorials'}}
 
   </div> <!-- /span6 -->
 
 
   <div class="col-md-5">
 
-    {{view 'top_hackers'}}
+    {{view 'top-hackers'}}
 
   </div> <!-- /span6 -->
 
