Fix bootstrap tabs bug

--- a/app/templates/_navigation.hbs
+++ b/app/templates/_navigation.hbs
@@ -39,7 +39,7 @@
         {{/link-to}}
 
         <ul class="dropdown-menu">
-          <li>{{link-to 'My Profile'}}</li>
+          <li>{{link-to 'My Profile' 'user'}}</li>
           <li>{{link-to 'My Groups'}}</li>
           <li class="divider"></li>
           <li>{{link-to 'Logout' 'login'}}</li>
