--- a/app/templates/contests/index.hbs
+++ b/app/templates/contests/index.hbs
@@ -26,7 +26,7 @@
             <td>{{duration}}</td>
             <td>
               <a href="" role="button" class="btn btn-success">Register</a><br /><br />
-              <a>{{alreadyRegistered}}</a> Registered
+              <a>100</a> Registered
             </td>
           </tr>
         {{else}}
