--- a/app/templates/contests/index.hbs
+++ b/app/templates/contests/index.hbs
@@ -11,7 +11,7 @@
       <table class="table table-striped table-bordered">
         <thead>
           <tr>
-            <th>Name</th>
+            <th>Title</th>
             <th>Starts</th>
             <th>Duration</th>
             <th></th>
@@ -21,8 +21,8 @@
 
         {{#each}}
           <tr>
-            <td><h4>{{#link-to 'contest' this}} {{name}} {{/link-to}}</h4> </td>
-            <td>{{starts}}</td>
+            <td><h4>{{#link-to 'contest' this}} {{title}} {{/link-to}}</h4> </td>
+            <td>{{startTime}}</td>
             <td>{{duration}}</td>
             <td>
               <a href="" role="button" class="btn btn-success">Register</a><br /><br />
