--- a/app/templates/contests/index.hbs
+++ b/app/templates/contests/index.hbs
@@ -22,7 +22,7 @@
         {{#each}}
           <tr>
             <td><h4>{{#link-to 'contest' this}} {{title}} {{/link-to}}</h4> </td>
-            <td>{{format-date startTime}}</td>
+            <td>{{format-date startTime}} UTC</td>
             <td>{{duration}}</td>
             <td>
               <a href="" role="button" class="btn btn-success">Register</a><br /><br />
