Better looking login page
Remove subnav and change links on navbar when on login page

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,8 @@
 {{partial "navigation"}}
 
-{{partial "subnavigation"}}
+{{#unless inLogin}}
+  {{partial "subnavigation"}}
+{{/unless}}
 
 <div class="main">
   <div class="container">
