--- a/app/templates/-navigation.hbs
+++ b/app/templates/-navigation.hbs
@@ -12,43 +12,35 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-ex1-collapse">
+      {{#unless inLogin}}
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+            {{#link-to '' class="dropdown-toggle" data-toggle="dropdown"}}
+              <i class="fa fa-user"></i>
+              Fayimora Femi-Balogun
+              <b class="caret"></b>
+            {{/link-to}}
+
+            <ul class="dropdown-menu">
+              <li>{{link-to 'My Profile' 'user'}}</li>
+              <li>{{link-to 'My Groups'}}</li>
+              <li class="divider"></li>
+              <li>{{link-to 'Logout' 'login'}}</li>
+            </ul>
+          </li>
+        </ul>
+
+        <form class="navbar-form navbar-right" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control input-sm search-query" placeholder="Search">
+          </div>
+        </form>
+      {{else}}
       <ul class="nav navbar-nav navbar-right">
-        <!-- <li class="dropdown"> -->
-        <!--   {{!#link&#45;to '' class="dropdown&#45;toggle" data&#45;toggle="dropdown"}} -->
-        <!--     <i class="fa fa&#45;cog"></i> -->
-        <!--     Settings -->
-        <!--     <b class="caret"></b> -->
-        <!--   {{!/link&#45;to}} -->
-        <!--  -->
-        <!--   <ul class="dropdown&#45;menu"> -->
-        <!--     <li>{{!link&#45;to 'Account Settings'}}</li> -->
-        <!--     <li>{{!link&#45;to 'Privacy Settings'}}</li> -->
-        <!--     <li class="divider"></li> -->
-        <!--     <li>{{! link&#45;to 'Help'}}</li> -->
-        <!--   </ul> -->
-        <!-- </li> -->
-
-        <li class="dropdown">
-          {{#link-to '' class="dropdown-toggle" data-toggle="dropdown"}}
-            <i class="fa fa-user"></i>
-            Fayimora Femi-Balogun
-            <b class="caret"></b>
-          {{/link-to}}
-
-          <ul class="dropdown-menu">
-            <li>{{link-to 'My Profile' 'user'}}</li>
-            <li>{{link-to 'My Groups'}}</li>
-            <li class="divider"></li>
-            <li>{{link-to 'Logout' 'login'}}</li>
-          </ul>
-        </li>
+        <li class=""><a href="#">Create an account</a></li>
+        <li class="">{{link-to 'Back to Homepage' 'index'}}</li>
       </ul>
-
-      <form class="navbar-form navbar-right" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control input-sm search-query" placeholder="Search">
-        </div>
-      </form>
+      {{/unless}}
     </div><!-- /.navbar-collapse -->
   </div> <!-- /.container -->
 </nav>
