Ad Sign up page

--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -42,7 +42,7 @@
 
 <!-- Text Under Box -->
 <div class="login-extra">
-  Don't have an account? <a href="">Sign Up</a><br/>
+  Don't have an account? {{link-to "Sign up" 'signup'}} <br />
   Remind <a href="">Password</a>
 </div> <!-- /login-extra -->
 
