--- a/app/templates/-navigation.hbs
+++ b/app/templates/-navigation.hbs
@@ -12,7 +12,7 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-ex1-collapse">
-      {{#unless inLogin}}
+      {{#unless inLoginOrLogout}}
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             {{#link-to '' class="dropdown-toggle" data-toggle="dropdown"}}
