Fix broken signup link

--- a/app/templates/-navigation.hbs
+++ b/app/templates/-navigation.hbs
@@ -37,7 +37,7 @@
         </form>
       {{else}}
       <ul class="nav navbar-nav navbar-right">
-        <li class=""><a href="#">Create an account</a></li>
+        <li class="">{{link-to 'Create an account' 'signup'}}</li>
         <li class="">{{link-to 'Back to Homepage' 'index'}}</li>
       </ul>
       {{/unless}}
