More useful error messages

--- a/app/templates/contests/error.hbs
+++ b/app/templates/contests/error.hbs
@@ -3,8 +3,8 @@
   <div class="col-md-12">
 
     <div class="error-container">
-      <h1>Oops!</h1>
-      <h2>Contest Not Found</h2>
+      <h1>Oops! {{status}}</h1>
+      <h2>{{responseJSON.error}}</h2>
 
       <div class="error-details">
         Please contact support if this is an unexpected problem!
