Extract navigation styles

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,7 @@
 @import 'vendor/bootstrap-sass-official/assets/stylesheets/bootstrap.scss';
 @import 'vendor/fontawesome/scss/font-awesome.scss';
 @import 'base';
+@import 'navigation';
 @import 'base-responsive';
 @import 'dashboard';
 @import 'login';
