Minor styling improvement :smiley:
Add left arrow beside "Back to Homepage" link

--- a/app/templates/-navigation.hbs
+++ b/app/templates/-navigation.hbs
@@ -38,7 +38,7 @@
       {{else}}
       <ul class="nav navbar-nav navbar-right">
         <li class="">{{link-to 'Create an account' 'signup'}}</li>
-        <li class="">{{link-to 'Back to Homepage' 'index'}}</li>
+        <li class="">{{#link-to 'index'}}<i class="fa fa-chevron-left"></i>&nbsp;&nbsp; Back to Homepage{{/link-to}}</li>
       </ul>
       {{/unless}}
     </div><!-- /.navbar-collapse -->
