Change occurrences of 'username' to 'handle'

--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -11,8 +11,8 @@
         <p>Sign in using your registered account:</p>
 
         <div class="field">
-          <label for="username">Username:</label>
-          {{input id="username" name="username" placeholder="Username" class="form-control input-lg username-field"}}
+          <label for="handle">Username:</label>
+          {{input id="handle" name="handle" placeholder="Handle" class="form-control input-lg handle-field"}}
         </div> <!-- /field -->
 
         <div class="field">
