--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -25,10 +25,10 @@
                 <fieldset>
 
                   <div class="form-group">
-                    <label for="username" class="col-md-4">Username</label>
+                    <label for="handle" class="col-md-4">Handle</label>
                     <div class="col-md-8">
-                      <input type="text" class="form-control" id="username" value="fayimora" disabled>
-                      <p class="help-block">Your username is for logging in and cannot be changed.</p>
+                      <input type="text" class="form-control" id="handle" value="fayimora" disabled>
+                      <p class="help-block">Your handle is for logging in and cannot be changed.</p>
                     </div> <!-- /controls -->
                   </div> <!-- /control-group -->
 
