--- a/app/templates/contest/loading.hbs
+++ b/app/templates/contest/loading.hbs
@@ -2,7 +2,7 @@
   <div class="col-md-12">
     <div class="error-container">
       <i class="fa fa-5x fa-spinner fa-spin"></i> <br/>
-      <h3>Loading contest</h3>
+      <h3>Loading contest...</h3>
     </div>
   </div>
 </div>
