--- a/app/templates/contest.hbs
+++ b/app/templates/contest.hbs
@@ -1,7 +1,7 @@
 <div class="bs-example">
   <ul class="nav nav-pills">
     {{#link-to 'contest' this tagName='li' href=false}} {{link-to 'Problems' 'contest' this}} {{/link-to}}
-    {{#link-to 'contest.submission' tagName='li' href=false}} {{link-to 'Submission' 'contest.submission'}} {{/link-to}}
+    {{#link-to 'contest.submission' tagName='li' href=false}} {{link-to 'Submit Code' 'contest.submission'}} {{/link-to}}
   </ul>
 
   <div class="tab-content">
