--- a/app/templates/contest/submission.hbs
+++ b/app/templates/contest/submission.hbs
@@ -4,7 +4,7 @@
 
     <div class="widget-header">
       <i class="fa fa-upload"></i>
-      <h3>Submission</h3>
+      <h3>Submit Code</h3>
     </div> <!-- /widget-header -->
 
     <div class="widget-content">
