Use contest.index

--- a/app/templates/contest.hbs
+++ b/app/templates/contest.hbs
@@ -1,6 +1,6 @@
 <div class="bs-example">
   <ul class="nav nav-pills">
-    {{#link-to 'contest.index' this tagName='li' href=false}} {{link-to 'Problems' 'contest' this}} {{/link-to}}
+    {{#link-to 'contest.index' this tagName='li' href=false}} {{link-to 'Problems' 'contest.index' this}} {{/link-to}}
     {{#link-to 'contest.submission' tagName='li' href=false}} {{link-to 'Submit Code' 'contest.submission'}} {{/link-to}}
   </ul>
 
