Implementation of users route with some cleanup

--- a/app/templates/user/index.hbs
+++ b/app/templates/user/index.hbs
@@ -6,7 +6,7 @@
 
       <div class="widget-header">
         <i class="icon-user"></i>
-        <h3>Your Account Settings</h3>
+        <h3>Your Account Settings {{firstName}}</h3>
       </div> <!-- /widget-header -->
 
       <div class="widget-content">
