--- a/app/templates/user/index.hbs
+++ b/app/templates/user/index.hbs
@@ -1,156 +1,3 @@
-<div class="row">
-
-  <div class="col-md-8">
-
-    <div class="widget stacked ">
-
-      <div class="widget-header">
-        <i class="icon-user"></i>
-        <h3>Your Account Settings {{firstName}}</h3>
-      </div> <!-- /widget-header -->
-
-      <div class="widget-content">
-
-        <div class="tabbable">
-          <ul class="nav nav-tabs">
-            <li class="active"> <a href="#profile" data-toggle="tab">Profile</a> </li>
-            <li><a href="#settings" data-toggle="tab">Settings</a></li>
-          </ul>
-
-          <br>
-
-          <div class="tab-content">
-            <div class="tab-pane active" id="profile">
-              <form id="edit-profile" class="form-horizontal col-md-8">
-                <fieldset>
-
-                  <div class="form-group">
-                    <label for="handle" class="col-md-4">Handle</label>
-                    <div class="col-md-8">
-                      <input type="text" class="form-control" id="handle" value="fayimora" disabled>
-                      <p class="help-block">Your handle is for logging in and cannot be changed.</p>
-                    </div> <!-- /controls -->
-                  </div> <!-- /control-group -->
-
-
-                  <div class="form-group">
-                    <label for="firstname" class="col-md-4">First Name</label>
-                    <div class="col-md-8">
-                      <input type="text" class="form-control" id="firstname" value="Fayimora">
-                    </div> <!-- /controls -->
-                  </div> <!-- /control-group -->
-
-
-                  <div class="form-group">
-                    <label class="col-md-4" for="lastname">Last Name</label>
-                    <div class="col-md-8">
-                      <input type="text" class="form-control" id="lastname" value="Femi-Balogun">
-                    </div> <!-- /controls -->
-                  </div> <!-- /control-group -->
-
-
-                  <div class="form-group">
-                    <label class="col-md-4" for="email">Email Address</label>
-                    <div class="col-md-8">
-                      <input type="text" class="form-control" id="email" value="fayi@fayimora.com">
-                    </div> <!-- /controls -->
-                  </div> <!-- /control-group -->
-
-
-                  <hr /><br />
-
-                  <div class="form-group">
-                    <label class="col-md-4" for="password1">Password</label>
-                    <div class="col-md-8">
-                      <input type="password" class="form-control" id="password1">
-                    </div> <!-- /controls -->
-                  </div> <!-- /control-group -->
-
-
-                  <div class="form-group">
-                    <label class="col-md-4" for="password2">Confirm</label>
-                    <div class="col-md-8">
-                      <input type="password" class="form-control" id="password2">
-                    </div> <!-- /controls -->
-                  </div> <!-- /control-group -->
-
-                  <br />
-
-                  <div class="form-group">
-
-                    <div class="col-md-offset-4 col-md-8">
-                      <button type="submit" class="btn btn-primary">Save</button>
-                      <button class="btn btn-default">Cancel</button>
-                    </div>
-                  </div> <!-- /form-actions -->
-                </fieldset>
-              </form>
-            </div>
-
-            <div class="tab-pane" id="settings">
-              <form id="edit-profile2" class="form-horizontal col-md-8">
-                <fieldset>
-                  <div class="form-group">
-                    <label class="col-md-4" for="shirtsize">Shirt Size</label>
-                    <div class="col-md-8">
-                      <select name="shirtsize" id="shirtsize" class="form-control">
-                        <option value="">Select</option>
-                        <option value="XS">XS</option>
-                        <option value="S">S</option>
-                        <option value="M">M</option>
-                        <option value="L">L</option>
-                        <option value="XL">XL</option>
-                        <option value="XXL">XXL</option>
-                      </select>
-                    </div>
-                  </div>
-
-                  <div class="form-group">
-                    <div class="checkbox">
-                      <label class="col-md-8" for="notifyForContest">Get notifications for new contests?
-                        <input type="checkbox" name="notifyForContest" id="notifyForContest" value="1" />
-                      </label>
-                    </div>
-
-                    <div class="checkbox">
-                      <label class="col-md-8" for="hideContactInfo">Hide contact information?
-                        <input type="checkbox" name="hideContactInfo" id="hideContactInfo" value="1" />
-                      </label>
-                    </div>
-                  </div>
-
-                  <div class="form-group">
-                    <div class="col-md-offset-4 col-md-8">
-                      <button type="submit" class="btn btn-primary">Save</button>
-                      <button class="btn btn-default">Cancel</button>
-                    </div>
-                  </div>
-                </fieldset>
-              </form>
-            </div>
-
-          </div>
-
-
-        </div>
-
-      </div> <!-- /widget-content -->
-
-    </div> <!-- /widget -->
-
-  </div> <!-- /span8 -->
-
-
-  <div class="col-md-4">
-
-    <div class="well">
-
-      <h3>Extra Info</h3>
-
-      <p>Some extra info about the hacker can be here.. A simple bio and picture might suffice
-      here</p>
-    </div>
-
-  </div> <!-- /span4 -->
-
-</div> <!-- /row -->
+<h3>First Name:</h3> {{firstName}} <br />
+<h3>Last Name:</h3> {{lastName}} <br />
+<h3>handle:</h3> {{handle}} <br />
